Added new image

--- a/Resources/Resources.en-US.resx
+++ b/Resources/Resources.en-US.resx
@@ -154,7 +154,7 @@
     <value>More Information</value>
   </data>
   <data name="WelcomeImageUrl" xml:space="preserve">
-    <value>https://pbs.twimg.com/profile_images/378800000210718633/4a028ce30e9238501be08f97ddbfd9f8_400x400.png</value>
+    <value>https://nursing.stonybrookmedicine.edu/sites/default/files/emergency_1.gif</value>
   </data>
   <data name="WelcomeTitle" xml:space="preserve">
     <value>Emergency Services Bot</value>
